--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
-DB_USER=postgres
-DB_PASSWORD=123456
-DB_HOST=localhost
-API_KEY=af1403987e874f079b1d9fdcba43e88b
+DATABASE_URL=postgresql://postgres:Bfb61AEdB2-f3f66*gdA3B51GdE1g4C1@roundhouse.proxy.rlwy.net:47670/railway
+PGDATA=/var/lib/postgresql/data/pgdata
+PGDATABASE=railway
+PGHOST=roundhouse.proxy.rlwy.net
+PGPASSWORD=Bfb61AEdB2-f3f66*gdA3B51GdE1g4C1
+PGPORT=47670
+PGUSER=postgres
+API_KEY= af1403987e874f079b1d9fdcba43e88b
