--- a/.env
+++ b/.env
@@ -1,8 +1,2 @@
-DATABASE_URL=postgresql://postgres:Bfb61AEdB2-f3f66*gdA3B51GdE1g4C1@roundhouse.proxy.rlwy.net:47670/railway
-PGDATA=/var/lib/postgresql/data/pgdata
-PGDATABASE=railway
-PGHOST=roundhouse.proxy.rlwy.net
-PGPASSWORD=Bfb61AEdB2-f3f66*gdA3B51GdE1g4C1
-PGPORT=47670
-PGUSER=postgres
+DATABASE_URL=postgres://default:k3UgRDZndEF5@ep-fragrant-bird-98844337.us-east-1.postgres.vercel-storage.com:5432/verceldb
 API_KEY= af1403987e874f079b1d9fdcba43e88b
